[project]
name = "logbesselk"
version = "3.3.1"
description = "Provide function to calculate the modified Bessel function of the second kind"
license = "Apache-2.0"
authors = [
    { name = "TAKEKAWA Takashi", email = "takekawa@tk2lab.org" }
]
readme = "README.md"
repository = "https://github.com/tk2lab/logbesselk"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.8"

[project.optional-dependences]
tensorflow = [
    "tensorflow>=2.9",
]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
manaed = true

[[tool.rye.sources]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
type = "find-links"

[tool.pytest.ini_options]
markers = [
    "vec",
]

[tool.ruff]
target-versin = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "N", "I"]

[ttol.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
rye_discovery = true
env_list = 
    py{310,311,312}-jax{4,latest}
    py{310,311,312}-tf{29,210,211,212,213,214,215,216,latest}
    eval_tf
    eval_jax

[gh-actions]
python =
    3.10: py312-jax4, py310-tf29
    3.12: py312-jaxlatest, py312-tflatest

[testenv:py{310,311,312}-jax{3,4,latest}]
deps =
    jaxlatest: jax[cuda12]
    jax4: jax[cuda12] (>=0.4,<0.5)
    pytest
    pandas
commands =
    {envpython} -m pytest tests/test_jax.py {posargs}

[testenv:py{310,311,312}-tf{29,210,211,212,213,214,215,216,latest}]
deps =
    tflatest: tensorflow
    tf29: tensorflow (>=2.9,<2.10)
    tf210: tensorflow (>=2.10,<2.11)
    tf211: tensorflow (>=2.11,<2.12)
    tf212: tensorflow (>=2.12,<2.13)
    tf213: tensorflow (>=2.13,<2.14)
    tf214: tensorflow (>=2.14,<2.15)
    tf215: tensorflow (>=2.15,<2.16)
    tf216: tensorflow (>=2.16,<2.17)
    pytest
    pandas
commands =
    {envpython} -m pytest tests/test_tensorflow.py {posargs}

[testenv:eval_jax]
deps =
    jax[cuda12]
    pandas
commands =
    {envpython} eval/eval_jax.py

[testenv:eval_tf]
deps =
    tensorflow
    pandas
commands =
    {envpython} eval/eval_tensorflow.py
"""
