[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logbesselk"
version = "3.4.0"
description = "Provide function to calculate the modified Bessel function of the second kind"
license = "Apache-2.0"
authors = [
    { name = "TAKEKAWA Takashi", email = "takekawa@tk2lab.org" }
]
readme = "README.md"
repository = "https://github.com/tk2lab/logbesselk"

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
jax = [
    "jax",
    "jaxlib",
]
jaxcuda = [
    "jax[cuda12]",
    "jaxlib",
]
tensorflow = [
    "tensorflow>=2.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
installer = "uv"
python = "3.12"
dependencies = [
    "pandas",
    "pytest",
]

[tool.hatch.envs.jax]
features = ["jax"]
[tool.hatch.envs.jax.env-vars]
JAX_PLATFORMS = "cpu"

[tool.hatch.envs.jaxcuda]
template = "jax"
features = ["jaxcuda"]
[tool.hatch.envs.jaxcuda.env-vars]
JAX_PLATFORMS = "cuda"
CUDA_LAUNCH_BLOCKING = "1"

[tool.pytest.ini_options]
markers = [
    "vec",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "N", "I"]

[ttol.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
